# AI_Radio_Take_3

./: .cache.sqlite  .dockerignore  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  notes.md  pyproject.toml  pytest.ini  requirements.txt  review_gui.py  run_review_gui.py  run_tests.py  test_output.txt  test_weather_audio.py  test_weather_gen.py  test_weather_verification.py  tmp_formatted_catalog.json  tmp_run_audit.py  tmp_run_audit2.py
.github/: copilot-instructions.md
Mvp_Plan/: Detailed_Plan.md  Mvp goal.md
Script_Improvement_Plan/: CONTEXT.md  CRITICAL_CONTEXT.md  CURRENT_STATUS.md  MASTER_PLAN.md  STATUS.md
ai_radio/: __init__.py  config.py  env.py  exceptions.py  logging_setup.py  signal.py
archive/: pipeline_state_backup_20260125_225558.json  regeneration_queue_backup_20260125_225558.json
data/: catalog.json  pipeline_state.json  regeneration_queue.json
dev/: chatterbox_server.py  docker-compose.yml
docs/: 24-hour-test.md  ARCHITECTURE.md  CHERRY_PICKER_INTEGRATION.md  LLM_CONTEXT.md  MOBILE_REVIEW_UI.md  MOCK_TESTING_SETUP.md  RADIO_GUI.md  README.md  REVIEW_GUI.md  REVIEW_GUI_PLAYWRIGHT_TESTING.md  REVIEW_GUI_TESTING.md  TAILSCALE_SETUP.md  TESTING_QUICK_REF.md  setup_services.md
liquidsoap/: playlist.m3u  radio.liq
logs/: validation_20260122_183714.json
music_with_lyrics/: A Good Man Is Hard to Find by Cass Daley.txt  A Kiss to Build a Dream On by Louis Armstrong.txt  A Room With a View by Artie Shaw.txt  Address Unknown by The Ink Spots.txt  Aint Misbehavin by Fats Waller.txt  All of Me by Billie Holiday.txt  (+126 more)
(+2214 files in other folders)
