[project]
name = "ai_radio"
version = "0.1.0"
description = "Minimal AI Radio package for signal detection"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
